# lumen3d

./: .dockerignore  .gitignore  Dockerfile  README.md  _check_unproject_da3.py  pyproject.toml  requirements-host.txt
deploy/: deploy_space.py
notebooks/: lumen3d_colab.ipynb
src/lumen3d/: __init__.py  association.py  backbone.py  build.py  cache.py  cli.py  downsample.py  embedding.py  export.py  fusion.py  geometry.py  ingest.py  query.py  segmentation.py  server.py
tests/: test_association.py  test_build.py  test_cache.py  test_downsample.py  test_embedding.py  test_export.py  test_fusion.py  test_geometry.py  test_ingest.py  test_query.py  test_server.py
viewer/: index.html
