[project]
name = "lumen3d"
version = "0.0.1"
description = "Turn a phone video into a language-queryable 3D scene."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Muhammad Awais Bin Adil" }]
license = { text = "Apache-2.0" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lumen3d"]
