[project]
name = "lumen3d"
version = "0.1.0"
description = "Turn a phone video into a language-queryable 3D scene."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Muhammad Awais Bin Adil" }]
license = { text = "Apache-2.0" }
dependencies = [
    "numpy",
    "opencv-python",
    "pillow",
    "protobuf",
    "sentencepiece",
    "torch",
    "torchvision",
    "transformers",
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/AwaisAdilKhokhar/lumen3d"
"Live Demo" = "https://huggingface.co/spaces/AwaisAdilKhokhar/lumen3d"

[project.scripts]
lumen3d = "lumen3d.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lumen3d"]
